
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int close (int) ;
 int create_file (int *) ;
 scalar_t__ g_addr ;
 int * g_file ;
 scalar_t__ g_length ;
 int info (char*,...) ;
 int read_virt_memory (scalar_t__,scalar_t__,int) ;

void handle_cmd_virt() {
 int fd = -1;
 info("[.] dumping virtual memory [%016lx, %016lx):\n",
  g_addr, g_addr + g_length);
 if (g_file != ((void*)0))
  fd = create_file(g_file);
 read_virt_memory(g_addr, g_length, fd);
 if (fd != -1)
  close(fd);
 info("[+] done\n");
}
